--- a/Main_Idea.ipynb
+++ b/Main_Idea.ipynb
@@ -19,74 +19,130 @@
     "\n",
     "\n",
     "\n",
-    "KGAT uses **relation-aware attention** to weigh the importance of neighbors (entities) in the KG. Unlike static aggregation methods, attention allows the model to:\n",
-    "- Learn which neighbors (e.g., items, genres, users) are most relevant to a target node (e.g., a user or item).\n",
-    "- Account for **relation types** (e.g., \"likes,\" \"same genre\") when assigning weights, capturing how different interactions influence recommendations.\n",
+    "\n",
+    "#### Understanding Attention in KGAT: How the Model Weighs Neighbors in a Knowledge Graph\n",
+    "\n",
+    "The **Knowledge Graph Attention Network (KGAT)** leverages attention mechanisms to dynamically prioritize relevant neighbors in a knowledge graph (KG) during message propagation. This ensures that the model focuses on the most meaningful interactions and relations for personalized recommendations. Below, I break down how attention works in KGAT, supported by real-world examples.\n",
+    "\n",
+    "\n",
+    "### **1. Attention Between Entities (User-Item Interactions)**\n",
+    "**How It Works**:  \n",
+    "For a target node (e.g., a user or item), KGAT computes attention coefficients for its immediate neighbors (e.g., items the user interacted with). These coefficients determine how much information to aggregate from each neighbor based on their relevance to the target node.\n",
+    "\n",
+    "**Example**:  \n",
+    "- **Scenario**: User U1 has interacted with three items:  \n",
+    "  - I1: *Action Movie* (rated 5/5)  \n",
+    "  - I2: *Comedy Movie* (rated 3/5)  \n",
+    "  - I3: *Documentary* (rated 2/5)  \n",
+    "\n",
+    "- **Attention Mechanism**:  \n",
+    "  During message passing, KGAT calculates attention scores for I1, I2, and I3 based on their features (e.g., genre, rating). Since U1 highly rated I1 (an action movie), the attention might assign:  \n",
+    "  - **Higher weight** to I1 (e.g., 0.7) due to its genre alignment and high rating.  \n",
+    "  - **Lower weights** to I2 (0.2) and I3 (0.1) because of genre mismatch or lower ratings.  \n",
+    "\n",
+    "- **Impact**:  \n",
+    "  When updating U1’s representation, the model emphasizes features of I1 (e.g., \"explosive action sequences\"), leading to stronger recommendations for similar action movies.\n",
+    "\n",
+    "\n",
+    "### **2. Attention Between Relations (Relation-Aware Weights)**\n",
+    "**How It Works**:  \n",
+    "KGAT evaluates the importance of **relation types** (e.g., \"rated\", \"similar_to\", \"also_bought\") for each node. Relations contributing more to the recommendation task receive higher attention weights.\n",
+    "\n",
+    "**Example**:  \n",
+    "- **Scenario**: Item I4 (*Horror Movie*) is connected to:  \n",
+    "  - I1 (*Action Movie*) via \"directed_by_same_director\" (shared director).  \n",
+    "  - I5 (*Horror Movie*) via \"similar_to\" (same genre).  \n",
+    "\n",
+    "- **Attention Mechanism**:  \n",
+    "  If the user U1 prefers movies directed by Christopher Nolan (who directed I1 and I4), the model might assign:  \n",
+    "  - **Higher weight** to the \"directed_by_same_director\" relation (e.g., 0.8).  \n",
+    "  - **Lower weight** to \"similar_to\" (e.g., 0.2) if U1’s history shows less interest in horror genres.  \n",
+    "\n",
+    "- **Impact**:  \n",
+    "  I4’s representation incorporates more information from I1 (via director) than from I5 (via genre), aligning with U1’s preferences.\n",
+    "\n",
+    "\n",
+    "### **3. Multi-Hop Attention: Prioritizing Paths in the Graph**\n",
+    "**How It Works**:  \n",
+    "KGAT aggregates information from multi-hop neighbors (e.g., user → item → category → item). Attention scores are computed at each hop to filter noisy paths and focus on meaningful connections.\n",
+    "\n",
+    "**Example**:  \n",
+    "- **Scenario**: User U1 interacts with *Action Movies* (I1, I2). The KG includes:  \n",
+    "  - I1 → *Action* (category)  \n",
+    "  - *Action* → I3 (another action movie)  \n",
+    "\n",
+    "- **Attention Mechanism**:  \n",
+    "  During the first hop, U1’s representation aggregates info from I1 and I2. In the second hop, I1 propagates its category (Action) to U1. Finally, U1’s representation also incorporates I3 via the category relation. The model might assign:  \n",
+    "  - **High attention** to the path U1 → I1 → *Action* → I3 (e.g., 0.9) because it aligns with U1’s preference for action movies.  \n",
+    "  - **Low attention** to a path like U1 → I2 → *Comedy* → I4 (e.g., 0.1) if U1 dislikes comedies.  \n",
+    "\n",
+    "- **Impact**:  \n",
+    "  U1 receives recommendations for I3 (action movie) but not for I4 (comedy), as the attention mechanism suppresses irrelevant paths.\n",
+    "\n",
+    "\n",
+    "### **4. Relation-Specific Attention Vectors**\n",
+    "**How It Works**:  \n",
+    "Each relation type (e.g., \"rated_high\", \"similar_to\") has a learnable attention vector. These vectors measure the compatibility between the target node and its neighbors through the relation.\n",
+    "\n",
+    "**Example**:  \n",
+    "- **Scenario**: User U1 has interacted with I1 (a movie) via two relations:  \n",
+    "  - \"rated_high\" (rating ≥ 4).  \n",
+    "  - \"watched\" (no rating).  \n",
+    "\n",
+    "- **Attention Mechanism**:  \n",
+    "  The model learns that \"rated_high\" is more predictive of preferences than \"watched\". For U1’s representation:  \n",
+    "  - **Higher attention** to the \"rated_high\" relation (e.g., 0.85).  \n",
+    "  - **Lower attention** to the \"watched\" relation (e.g., 0.15).  \n",
+    "\n",
+    "- **Impact**:  \n",
+    "  Recommendations prioritize items that U1 has positively rated (e.g., action movies with high ratings) over items merely watched.\n",
+    "\n",
+    "\n",
+    "### **5. Softmax Normalization for Neighbor Importance**\n",
+    "**How It Works**:  \n",
+    "Attention scores are normalized via softmax across all neighbors of a node. This ensures the model focuses on the **relative importance** of neighbors within a local subgraph.\n",
+    "\n",
+    "**Example**:  \n",
+    "- **Scenario**: Item I1 (*Action Movie*) has neighbors via two relations:  \n",
+    "  - \"similar_to\" → I3 (action movie), I4 (action movie).  \n",
+    "  - \"also_bought\" → I5 (popcorn), I6 (DVD).  \n",
+    "\n",
+    "- **Attention Mechanism**:  \n",
+    "  During message passing, the model computes attention scores for I3, I4, I5, I6. Softmax normalizes these scores:  \n",
+    "  - I3: 0.4 → normalized to 0.35.  \n",
+    "  - I4: 0.5 → normalized to 0.45.  \n",
+    "  - I5: 0.1 → normalized to 0.1.  \n",
+    "  - I6: 0.1 → normalized to 0.1.  \n",
+    "\n",
+    "- **Impact**:  \n",
+    "  The model prioritizes I4 (e.g., \"similar_to\") over less relevant neighbors like I5 (e.g., \"also_bought\"), focusing on content similarity rather than purchase co-occurrence.\n",
     "\n",
     "\n",
     "\n",
-    "### **1. How Attention Works in KGAT**\n",
-    "#### **a. Relation-Specific Transformations**\n",
-    "Each relation type $ r $ (e.g., \"user-item interaction,\" \"item-genre\") has a **learnable weight matrix** $ W_r $. When computing attention between a node $ h $ (head entity) and its neighbor $ t $ (tail entity) via relation $ r $:\n",
-    "- Both entities are transformed using $ W_r $:  \n",
-    "  $$\n",
-    "  \\hat{h}_r = W_r h, \\quad \\hat{t}_r = W_r t\n",
-    "  $$\n",
-    "- This ensures the attention mechanism considers the **semantic meaning** of the relation.\n",
+    "### **6. End-to-End Learning of Attention Weights**\n",
+    "**How It Works**:  \n",
+    "Attention weights are learned during training by optimizing a recommendation loss (e.g., BPR loss). The model adjusts weights to maximize the accuracy of positive item predictions over negative ones.\n",
     "\n",
-    "#### **b. Attention Coefficients**\n",
-    "Attention scores are computed using a **LeakyReLU** neural network over concatenated transformed vectors:\n",
-    "$$\n",
-    "\\alpha_{h,t} = \\text{LeakyReLU}\\left(a^T [\\hat{h}_r \\parallel \\hat{t}_r]\\right)\n",
-    "$$\n",
-    "- $ a $ is a trainable attention vector.\n",
-    "- The scores are normalized via **softmax** across all neighbors of the target node:  \n",
-    "  $$\n",
-    "  \\alpha_{h,t} = \\text{softmax}(\\alpha_{h,t})\n",
-    "  $$\n",
-    "- This ensures that the sum of weights for all neighbors equals 1.\n",
+    "**Example**:  \n",
+    "- **Scenario**: User U1 is recommended I3 (action movie) over I7 (romantic movie).  \n",
+    "- **Training Process**:  \n",
+    "  - If I3 is a positive example (U1 likes it), the model increases attention weights for paths connecting U1 → I3 (e.g., via \"rated_high\" and \"similar_to\").  \n",
+    "  - If I7 is a negative example (U1 dislikes it), attention to paths involving romantic genres or \"watched\" relations is suppressed.  \n",
     "\n",
-    "#### **c. Message Passing**\n",
-    "The target node aggregates messages from its neighbors using the attention coefficients:\n",
-    "$$\n",
-    "v_i^{(l+1)} = \\sigma\\left(\\sum_{j \\in \\mathcal{N}_i} \\alpha_{i,j} W_r v_j^{(l)}\\right)\n",
-    "$$\n",
-    "- $ v_i^{(l+1)} $: Updated embedding for node $ i $ at layer $ l+1 $.\n",
-    "- $ \\mathcal{N}_i $: Neighbors of node $ i $.\n",
-    "- $ \\sigma $: Activation function (e.g., ReLU).\n",
+    "- **Impact**:  \n",
+    "  Over time, the model learns that \"rated_high\" and \"similar_to\" relations are more critical for U1’s preferences than \"watched\" or \"also_bought\".\n",
     "\n",
     "\n",
     "\n",
+    "### **Key Takeaways with Real-World Analogy**\n",
+    "- **Attention as a Filter**:  \n",
+    "  Imagine a user browsing a movie database. The model acts like a curator, highlighting movies directed by Christopher Nolan (high attention) and downplaying unrelated genres (low attention).  \n",
     "\n",
-    "### **2. Key Features of KGAT’s Attention Mechanism**\n",
-    "#### **a. Heterogeneous Graph Handling**\n",
-    "- Nodes (users, items, entities) and edges (relations) are **heterogeneous**.\n",
-    "- Attention scores depend on **both node features and relation types**, allowing the model to:\n",
-    "  - Differentiate between weak and strong signals (e.g., \"clicked\" vs. \"purchased\").\n",
-    "  - Prioritize relations critical for recommendations (e.g., \"same genre\" for movie suggestions).\n",
+    "- **Relation-Aware Prioritization**:  \n",
+    "  For a user who rates action movies highly, the \"rated_high\" relation gets more weight than \"watched\". Similarly, \"similar_to\" for action movies is prioritized over \"also_bought\" for snacks.  \n",
     "\n",
-    "#### **b. Multi-Head Attention**\n",
-    "- **Multiple attention heads** are used to stabilize training and capture diverse patterns.\n",
-    "- Final embeddings are concatenated or averaged across heads:  \n",
-    "  $$\n",
-    "  v_i^{(l+1)} = \\parallel_{k=1}^K \\sigma\\left(\\sum_{j \\in \\mathcal{N}_i} \\alpha_{i,j}^{(k)} W_r^{(k)} v_j^{(l)}\\right)\n",
-    "  $$\n",
-    "  - $ K $: Number of attention heads.\n",
-    "\n",
-    "#### **c. End-to-End Training**\n",
-    "- Attention coefficients are optimized via gradients from the **recommendation loss** (e.g., BPR loss for implicit feedback).\n",
-    "- The model learns to focus on neighbors that improve prediction accuracy (e.g., users with similar preferences or items with complementary attributes).\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### **3. Example: User-Item Recommendations**\n",
-    "Consider a user $ u $ connected to items $ i_1, i_2, i_3 $ via \"interacted_with\" and items $ i_2, i_4 $ via \"purchased\":\n",
-    "1. **Relation-Specific Attention**: The model assigns higher weights to \"purchased\" items ($ i_2, i_4 $) than \"interacted_with\" items ($ i_1, i_3 $) because purchases are stronger signals.\n",
-    "2. **Neighbor Importance**: If $ i_2 $ is a popular item similar to items $ u $ previously liked, its attention weight increases, influencing $ u $’s embedding.\n",
-    "3. **Propagation Layers**: Over multiple layers, information propagates further (e.g., from items to their genres, then to related items), refining user/item representations.\n",
-    "\n",
-    "\n",
+    "- **Multi-Hop Reasoning**:  \n",
+    "  KGAT might learn that recommending a movie from a director U1 loves (e.g., Nolan) is more effective than suggesting a movie from a genre U1 only occasionally watches (e.g., sci-fi).\n",
     "\n",
     "\n",
     "### **4. Benefits of Attention in KGAT**\n",
