--- a/Main_Idea.ipynb
+++ b/Main_Idea.ipynb
@@ -21,8 +21,10 @@
     "\n",
     "\n",
     "#### Understanding Attention in KGAT: How the Model Weighs Neighbors in a Knowledge Graph\n",
+    "In KGAT, **attention** is used to `assign different importance weights to different neighbors of an entity` in the knowledge graph. Instead of treating all connections (or relations) equally, the attention mechanism learns which neighboring entities are more useful for predicting user preferences.\n",
     "\n",
-    "The **Knowledge Graph Attention Network (KGAT)** leverages attention mechanisms to dynamically prioritize relevant neighbors in a knowledge graph (KG) during message propagation. This ensures that the model focuses on the most meaningful interactions and relations for personalized recommendations. Below, I break down how attention works in KGAT, supported by real-world examples.\n",
+    "The **Knowledge Graph Attention Network (KGAT)** leverages attention mechanisms to dynamically prioritize relevant neighbors in a knowledge graph (KG) during message propagation. This ensures that the model focuses on the most meaningful interactions and relations for personalized recommendations. \n",
+    "        Below, I break down how attention works in KGAT.\n",
     "\n",
     "\n",
     "### **1. Attention Between Entities (User-Item Interactions)**\n",
