--- a/Recommendatio.ipynb
+++ b/Recommendatio.ipynb
@@ -5,12 +5,12 @@
    "id": "45c9ec61",
    "metadata": {},
    "source": [
-    "## 1. Import Libraries"
+    "## Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6bd8f274",
    "metadata": {},
    "outputs": [],
